--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,9 @@ gradle-app.setting
 # Cache of project
 .gradletasknamecache
 
+#OS specific grade settings
+gradle.properties
+
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
