update robot model and add cameras

--- a/advantagescope/assets/Robot_frc2713-2026/config.json
+++ b/advantagescope/assets/Robot_frc2713-2026/config.json
@@ -17,7 +17,71 @@
     0,
     0
   ],
-  "cameras": [],
+  "cameras": [
+    {
+      "name": "front",
+      "rotations": [
+        {
+          "axis": "y",
+          "degrees": -12.5
+        }
+      ],
+      "position": [0.2561335746, 0.1198999888, 0.538800167],
+      "resolution": [1920, 1080],
+      "fov": 69
+    },
+
+    {
+      "name": "rear",
+      "rotations": [
+        {
+          "axis": "z",
+          "degrees": 180
+        },
+        {
+          "axis": "y",
+          "degrees": 12.5
+        }
+      ],
+      "position": [-0.3132835746, -0.0436999888, 0.538800167],
+      "resolution": [1920, 1080],
+      "fov": 69
+    },
+
+    {
+      "name": "left",
+      "rotations": [
+
+        {
+          "axis": "z",
+          "degrees": 90
+        },
+        {
+          "axis": "x",
+          "degrees": 12.5
+        }
+      ],
+      "position": [-0.1452999888, 0.3672585746, 0.538800167],
+      "resolution": [1920, 1080],
+      "fov": 69
+    },
+    {
+      "name": "right",
+      "rotations": [
+        {
+          "axis": "z",
+          "degrees": -90
+        },
+        {
+          "axis": "x",
+          "degrees": -12.5
+        }
+      ],
+      "position": [-0.1722000112, -0.3672585746, 0.538800167],
+      "resolution": [1920, 1080],
+      "fov": 69
+    }
+  ],
   "components": [
     {
       "zeroedRotations": [
@@ -48,8 +112,8 @@
         }
       ],
       "zeroedPosition": [
-        0,
-        -0.04445,
+        -0.0127,
+        -0.0127,
         0
       ]
     },
@@ -65,9 +129,9 @@
         }
       ],
       "zeroedPosition": [
-        0,
-        -0.04445,
-        -0.4694966226
+        -0.0127,
+        -0.0127,
+        -0.472377262
       ]
     },
     {
@@ -82,9 +146,9 @@
         }
       ],
       "zeroedPosition": [
-        -0.103807641,
-        -0.04445,
-        -0.4694966226
+        -0.0623012978,
+        -0.0127,
+        -0.4984384748
       ]
     }
   ]
