--- a/advantagescope/assets/Robot_frc2713-2026/config.json
+++ b/advantagescope/assets/Robot_frc2713-2026/config.json
@@ -26,11 +26,17 @@
           "degrees": -12.5
         }
       ],
-      "position": [0.2561335746, 0.1198999888, 0.538800167],
-      "resolution": [1920, 1080],
+      "position": [
+        0.2561335746,
+        0.1198999888,
+        0.538800167
+      ],
+      "resolution": [
+        1920,
+        1080
+      ],
       "fov": 69
     },
-
     {
       "name": "rear",
       "rotations": [
@@ -43,15 +49,20 @@
           "degrees": 12.5
         }
       ],
-      "position": [-0.3132835746, -0.0436999888, 0.538800167],
-      "resolution": [1920, 1080],
+      "position": [
+        -0.3132835746,
+        -0.0436999888,
+        0.538800167
+      ],
+      "resolution": [
+        1920,
+        1080
+      ],
       "fov": 69
     },
-
     {
       "name": "left",
       "rotations": [
-
         {
           "axis": "z",
           "degrees": 90
@@ -61,8 +72,15 @@
           "degrees": 12.5
         }
       ],
-      "position": [-0.1452999888, 0.3672585746, 0.538800167],
-      "resolution": [1920, 1080],
+      "position": [
+        -0.1452999888,
+        0.3672585746,
+        0.538800167
+      ],
+      "resolution": [
+        1920,
+        1080
+      ],
       "fov": 69
     },
     {
@@ -77,8 +95,15 @@
           "degrees": -12.5
         }
       ],
-      "position": [-0.1722000112, -0.3672585746, 0.538800167],
-      "resolution": [1920, 1080],
+      "position": [
+        -0.1722000112,
+        -0.3672585746,
+        0.538800167
+      ],
+      "resolution": [
+        1920,
+        1080
+      ],
       "fov": 69
     }
   ],
